@@ -132,9 +132,9 @@
       <mkdir dir="${output.lib.dir}" />
       <mkdir dir="${bin.dir}" />
       <mkdir dir="${dist.bin.dir}" />
-		<tstamp>
-			<format property="build.timestamp" pattern="yyyyMMdd-HHmm" locale="en,UK" />
-		</tstamp>
+      <tstamp>
+         <format property="build.timestamp" pattern="yyyyMMdd-HHmm" locale="en,UK" />
+      </tstamp>
    </target>
 
    <target name="setDebug">
@@ -152,7 +152,7 @@
 
    <target name="output" depends="prepare">
       <ant dir="${modules.dir}" />
-		<echo file="${build.dir}/BuildID.txt" message="${build.timestamp}" />
+      <echo file="${build.dir}/BuildID.txt" message="${build.timestamp}" />
       <!-- Bin directory -->
       <copy todir="${bin.dir}">
          <fileset dir="${input.dir}/bin" includes="*.ico" />
